[tool.poetry]
name = "tivit-test-api"
version = "0.1.0"
description = ""
authors = ["RicardoTurco <ricturco@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}
uvicorn = {extras = ["standard"], version = "^0.30.3"}
gunicorn ="^23.0.0"
setuptools = "^70.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
